<resources>
    <string name="app_name">seminar1</string>
    <string name="welcome_to_go_android">Welcome to Go Android</string>
    <string name="ID">ID</string>
    <string name="please_edit_id">아이디를 입력해주세요</string>
    <string name="PW">PW</string>
    <string name="please_edit_pw">비밀번호를 입력해주세요</string>
    <string name="LOGIN">LOGIN</string>
    <string name="SIGN_UP">SIGN UP</string>
    <string name="please_edit_name">이름을 입력하세요.</string>
    <string name="SKILL">SKILL</string>
    <string name="home_kr">홈</string>
    <string name="my_page_kr">마이페이지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery_kr">갤러리</string>
    <string name="crayon_repo">짱구의 레포지터리</string>
    <string name="repo_name">레포 이름</string>
    <string name="Home">홈</string>
    <string name="Search">검색</string>
    <string name="Gallery">갤러리</string>
</resources>