<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_go_android"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/idTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ID"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="@id/titleTv"
        app:layout_constraintEnd_toEndOf="@id/titleTv"
        app:layout_constraintTop_toBottomOf="@id/titleTv"/>

    <EditText
        android:id="@+id/idEditTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/please_edit_id"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/titleTv"
        app:layout_constraintEnd_toEndOf="@id/titleTv"
        app:layout_constraintTop_toBottomOf="@id/idTv"/>

    <TextView
        android:id="@+id/pwTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/PW"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@id/titleTv"
        app:layout_constraintEnd_toEndOf="@id/titleTv"
        app:layout_constraintTop_toBottomOf="@id/idEditTv"/>

    <EditText
        android:id="@+id/pwEditTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/please_edit_pw"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/titleTv"
        app:layout_constraintEnd_toEndOf="@id/titleTv"
        app:layout_constraintTop_toBottomOf="@id/pwTv"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/titleTv"
        app:layout_constraintEnd_toEndOf="@id/titleTv"
        app:layout_constraintTop_toBottomOf="@id/pwEditTv"
        />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/SIGN_UP"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/titleTv"
        app:layout_constraintEnd_toEndOf="@id/titleTv"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        />


</androidx.constraintlayout.widget.ConstraintLayout>